# yajbe-data-format

./: .gitignore  README.md
.github/workflows/: python-package.yml
c/: Makefile
c/examples/: demo-yajbe.c
c/include/: yajbe.h
c/src/: bytes-reader.c  bytes-slice.c  bytes-writer.c  fields-decoder.c  fields-encoder.c  util.h  yajbe-decoder.c  yajbe-encoder.c
c/tests/: test-bool.c  test-field.c  test-float.c  test-int.c  utest.h
dart/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
dart/example/: yajbe_example.dart
dart/lib/: yajbe.dart
dart/test/: field_name_test.dart  yajbe_array_test.dart  yajbe_bool_test.dart  yajbe_bytes_test.dart  yajbe_float_test.dart  yajbe_int_test.dart  yajbe_map_test.dart  yajbe_null_test.dart  yajbe_string_test.dart  yajbe_test.dart
golang/yajbe/: README.md  array_test.go  benchmark_analysis.go  benchmark_improvements.go  benchmark_test.go  bool_test.go  bytes_test.go  complex_decoder_test.go  cross_comparison_test.go  cross_reference_test.go  enum.go  (+27 more)
java/: README.md
python/: README.md  example.py  pyproject.toml
python/src/yajbe/: __init__.py  decoder.py  encoder.py  freq.py
python/tests/: __init__.py  test_yajbe.py  test_yajbe_array.py
python/yajbe/: __init__.py  decoder.py  encoder.py  yajbe.tests.py
specs/: README.md
typescript/: README.md  yajbe.demo.ts  yajbe.test.arrays.ts  yajbe.test.bool.ts  yajbe.test.bytes.ts  yajbe.test.datasets.ts  yajbe.test.fieldnames.ts  yajbe.test.floats.ts  yajbe.test.ints.ts  yajbe.test.maps.ts  yajbe.test.nulls.ts  yajbe.test.string.ts  yajbe.test.ts  yajbe.ts
(+77 files in other folders)
